--- a/app/components/Manage/manageView.html
+++ b/app/components/Manage/manageView.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<div ng-if="isTransporter || isTransporter">
+<div ng-if="isTransporter || isDispatcher">
     <div class="form-group">
         <div class="my-button normal-button" ui-sref="shipments_manage">Shipments manage</div>
     </div>
