--- a/app/components/Account/Login/loginView.html
+++ b/app/components/Account/Login/loginView.html
@@ -17,7 +17,7 @@
       <div class="my-button important-button" ui-sref="registration" >{{'texts.registration' | i18next}}</div>
     </div>
     <div class="form-group">
-      <div class="my-button easy-button">{{'texts.forgot_password' | i18next}}</div>
+      <div class="my-button easy-button" ui-sref="forgotPassword">{{'texts.forgot_password' | i18next}}</div>
     </div>
   </form>
 </div>
