--- a/app/components/Home/homeView.html
+++ b/app/components/Home/homeView.html
@@ -41,7 +41,7 @@
     </div>
     <div ng-if="isDriver">
         <div class="form-group">
-          <div class="my-button normal-button" ui-sref="ss" >My shipments</div>
+          <div class="my-button normal-button" ui-sref="shipments" >My shipments</div>
         </div>
     </div>
 </div>
