--- a/app/components/Manage/manageView.html
+++ b/app/components/Manage/manageView.html
@@ -9,6 +9,9 @@
     <div class="form-group">
         <div class="my-button normal-button" ui-sref="shipments_manage">Shipments manage</div>
     </div>
+    <div class="form-group">
+        <div class="my-button normal-button" ui-sref="view_shipments">View shipments</div>
+    </div>
     <h3>Company</h3>
     <div class="form-group">
         <div class="my-button normal-button" ui-sref="new_vehicle">New vehicle</div>
