--- a/app/components/Manage/ViewShipments/viewShipmentsView.html
+++ b/app/components/Manage/ViewShipments/viewShipmentsView.html
@@ -2,14 +2,18 @@
     <h1>View Shipments on map</h1>
     <h2>Actual</h2>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-        Seznam auktuálních jízd
+        Seznam auktuálních jízd s možností zobrazení mapy kde právě je a zobrazení fotek(při převzetí)
     </div>
     <h2>History</h2>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-        Seznam jízd které se již jeli
+        Seznam jízd které se již jeli s možnosti zobrazeni mapy jeho cesty a zobrazení fotek (při převzeti i při odevzdání)
     </div>
 </div>
 <div class="view-map">
-    1. Mapa cesty pokud jízda už proběhla.
-    2. Mapa odjeté cesty a kde právě je.
+    <h3>Mapa</h3>
+    Zobrazení mapy
+</div>
+<div class="view-photos">
+    <h3>Fotky</h3>
+    Zobrazení fotek
 </div>
