--- a/app/components/Manage/ViewShipments/viewShipmentsView.html
+++ b/app/components/Manage/ViewShipments/viewShipmentsView.html
@@ -16,4 +16,43 @@
 <div class="view-photos">
     <h3>Fotky</h3>
     Zobrazení fotek
+
+    <input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
+    <input class="btn btn-primary" type="button" ng-click="uploadPhoto(photos)" value="upload">
+
+    <input class="btn btn-primary" type="button" ng-click="getPhoto()" value="GET">
+    <ul class="list-inline" ng-show="hasPhoto">
+        <li><strong>files:</strong></li>
+        <li ng-repeat="photo in photos"> {{photo.name}}</li>
+    </ul>
+    <img ng-src="album/{{vm.previewPhoto.name}}" style="max-height: 150px" ng-show="vm.previewPhoto" class="img-responsive" alt="vm.previewPhoto.name" />
+
+<!--
+    <body>
+        <form name="form1" method="post" enctype="multipart/form-data" action="http://localhost:51246/api/data/filesX">
+            <div>
+                <label for="id_auction">Auction ID</label>
+                <input name="id_auction" type="text" />
+            </div>
+            
+            <div>
+                <label for="image1">Image File</label>
+                <input name="image1" type="file" />
+            </div>
+            <div>
+                <label for="image2">Image File</label>
+                <input name="image2" type="file" />
+            </div>
+            <div>
+                <label for="image3">Image File</label>
+                <input name="image3" type="file" />
+            </div>
+            <div>
+                <input type="submit" value="Submit" />
+            </div>
+        </form>
+    </body>
+
+    -->
+
 </div>
