--- a/app/components/Auction/WinAuction/winAuctionView.html
+++ b/app/components/Auction/WinAuction/winAuctionView.html
@@ -11,6 +11,7 @@
             </div>
         </div>
         <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div ng-if="!AuctionList.length" class="no-auction">Žádné dostupné aukce...</div>
             <div class="auction-item" ng-repeat="item in AuctionList">
                 <detail-auction auction-item="{item}"></detail-auction>
             </div>
