--- a/app/components/Home/homeView.html
+++ b/app/components/Home/homeView.html
@@ -13,7 +13,7 @@
     </div>
     <div ng-if="isTransporter">
         <div class="form-group">
-          <div class="my-button normal-button" ui-sref="favouriteauction" >Favourite auction</div>
+          <div class="my-button normal-button" ui-sref="favouriteAuction" >Favourite auction</div>
         </div>
         <div class="form-group">
           <div class="my-button normal-button" ui-sref="bidsauction" >My Bids auction</div>
