--- a/app/components/Manage/ViewShipments/viewShipmentsView.html
+++ b/app/components/Manage/ViewShipments/viewShipmentsView.html
@@ -46,7 +46,7 @@
             </div>
         </div>
             <!-- Only for andorid app -->
-           <!-- <input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
-            <input class="btn btn-primary" type="button" ng-click="uploadPhoto(photos)" value="upload"> -->
+           <input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
+            <input class="btn btn-primary" type="button" ng-click="uploadPhoto(photos)" value="upload">
     </div>
 </div>
