--- a/app/components/Account/ForgotPassword/forgotPasswordView.html
+++ b/app/components/Account/ForgotPassword/forgotPasswordView.html
@@ -1,4 +1,4 @@
-<div class="user-page">
+<div class="user-page forget-password-page" ng-open="formLabels('forgotPasswordForm')" >
     <h1>Forgot your password</h1>
     <p>Pošlete si na mail nové heslo a pak si ho v sekci "Account" změnte na svoje heslo.</p>
     <form name="forgotPasswordForm" novalidate>
@@ -6,8 +6,8 @@
             <input type="email" name="email" class="form-control my-input" placeholder="Email" ng-model="email" ng-class="{'input-error' : forgotPasswordForm.email.$invalid && (!forgotPasswordForm.email.$pristine || clicked)}" required/>
             <i class="glyphicon glyphicon-envelope form-control-feedback"></i>
         </div>
-        <div class="form-group">
-            <div class="my-button important-button" ng-click="sendMail()">Send password</div>
+        <div class="form-group buttons">
+            <div class="my-button big-button important-button" ng-click="sendMail()">Send password</div>
         </div>
     </form>
 </div>
