--- a/app/components/Account/Login/loginView.html
+++ b/app/components/Account/Login/loginView.html
@@ -1,7 +1,7 @@
 <div class="login-page">
   <h1>{{'texts.login' | i18next}}</h1>
   <p>{{'texts.login_text' | i18next}}</p>
-  <form name="loginForm" novalidate>
+  <form name="loginForm" ng-open="formLabels('loginForm')" novalidate>
     <div class="form-group has-feedback has-feedback-left">
       <input type="text" name="username" class="form-control my-input" placeholder="{{'texts.username' | i18next}}" ng-model="user.name" ng-class="{'input-error' : loginForm.username.$invalid && (!loginForm.username.$pristine || clicked)}" ng-minlength="5" required/>
       <i class="glyphicon glyphicon-user form-control-feedback"></i>
@@ -10,14 +10,13 @@
       <input type="password" name="password" class="form-control my-input" placeholder="{{'texts.password' | i18next}}" ng-model="user.password" ng-class="{'input-error' : loginForm.password.$invalid && (!loginForm.password.$pristine || clicked)}" ng-minlength="8" required/>
       <i class="glyphicon glyphicon-lock form-control-feedback"></i>
     </div>
-    <div class="form-group">
-      <div class="my-button normal-button" ng-click="login()" >{{'texts.login' | i18next}}</div>
+    <div class="form-group buttons">
+      <div class="my-button big-button normal-button" ng-click="login()" >{{'texts.login' | i18next}}</div>
     </div>
-    <div class="form-group">
-      <div class="my-button important-button" ui-sref="registration" >{{'texts.registration' | i18next}}</div>
-    </div>
-    <div class="form-group">
+    <hr>
+    <div class="form-group buttons">
       <div class="my-button easy-button" ui-sref="forgotPassword">{{'texts.forgot_password' | i18next}}</div>
+      <div class="my-button important-button" ui-sref="registration" >{{'texts.registration' | i18next}}</div>
     </div>
   </form>
 </div>
