--- a/app/components/Manage/ShipmentsManage/shipmentsManageView.html
+++ b/app/components/Manage/ShipmentsManage/shipmentsManageView.html
@@ -1,4 +1,4 @@
-<div class="auction-list-page">
+<div class="auction-list-page row">
     <h1>Shipments manage</h1>
     <h2>Aukce na přiřazení</h2>
     <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
@@ -19,9 +19,9 @@
         </div>
     </div>
 </div>
-<div class="assignments">
+<div class="assignments row">
+    <h2>Přiřazení řidiči na zásilky</h2>
     <table>
-        <caption>Přiřazení řidiči na zásilky</caption>
         <tr>
             <th>Jméno</th>
             <th>Přijmení</th>
