--- a/app/components/Manage/manageView.html
+++ b/app/components/Manage/manageView.html
@@ -7,19 +7,13 @@
 
 <div ng-if="isTransporter || isDispatcher">
     <div class="form-group">
-        <div class="my-button normal-button" ui-sref="shipments_manage">Shipments manage</div>
-    </div>
-    <div class="form-group">
+        <div class="my-button normal-button big-button" ui-sref="shipments_manage">Shipments manage</div>
         <div class="my-button normal-button" ui-sref="view_shipments">View shipments</div>
     </div>
-    <h3>Company</h3>
+    <h1>Company</h1>
     <div class="form-group">
         <div class="my-button normal-button" ui-sref="new_vehicle">New vehicle</div>
-    </div>
-    <div class="form-group">
         <div class="my-button normal-button" ui-sref="new_employee">New employee</div>
-    </div>
-    <div class="form-group">
         <div class="my-button normal-button" ui-sref="my_company">My company</div>
     </div>
 </div>
