--- a/css/header.css
+++ b/css/header.css
@@ -21,20 +21,26 @@ body{
 
 h1{
     font-size: 34px;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 27px;
+    margin: 10px 0 20px 0;
+    padding: 0 0 5px 25px;
+    border-bottom: 1px solid #e6e6f1;
 }
 
 h2{
     color: #2c2d51;
     font-size: 20px;
     font-weight: bold;
+    padding: 0 0 5px 20px;
+    margin: 8px 0 16px 0;
+    border-bottom: 1px solid #e6e6f1;
 }
 
 h3{
     font-size: 16px;
     font-weight: bold;
+    padding: 0 0 5px 15px;
+    margin: 5px 0 10px 0;
+    border-bottom: 1px solid #e6e6f1;
 }
 
 p{
